fix genders nationalities swagger
